# ziriz-contract-nft-series

./: .gitignore  .prettierignore  Cargo.toml  README.md  package-lock.json  package.json
.husky/: pre-commit
contract/: Cargo.toml
contract/src/: admin_storage.rs  bump.rs  contract.rs  data_type.rs  lib.rs  metadata_storage.rs  nft_contract.rs  series_storage.rs  storage_types.rs  test.rs  token_storage.rs
