[workspace]
members = ["./contract"]
resolver = "2"

[workspace.dependencies]
loam-sdk = "0.6.9"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
